--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       document.getElementById("yesButton").addEventListener("click", showAlert);
 
       function showAlert() {
-        alert("I love you! See you soon <3");
+        alert("yay! i love you bub :)");
       }
 
       var yesButton = document.getElementById("yesButton");
